--- a/CucumberBasics/package.json
+++ b/CucumberBasics/package.json
@@ -12,7 +12,8 @@
   },
   "author": "Cristina Feldiorean",
   "license": "ISC",
-  "dependencies": {
-    "cucumber": "^7.0.0-rc.0"
+  "devDependencies": {
+    "@types/cucumber":"^7.0.0",
+    "@cucumber/cucumber": "^7.3.2"
   }
 }
