--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "launchcypress": "./node_modules/.bin/cypress open",
-    "testcases" :"./node_modules/.bin/cypress run -- spec ./cypress/integration/testcases/*js --browser chrome",
-    "merge-reports":"mochawesome-merge cypress/reports/*json > cypress/reports/finalreport.json",
-    "generate-reports":"merge cypress/reports/finalreport.json --reportDir ./ --inline",
-    "finaltest":"npm run testcases && npm run merge-reports && npm run generate-reports"
+    "testcases": "./node_modules/.bin/cypress run -- spec ./cypress/integration/testcases/*js --browser chrome",
+    "merge-reports": "mochawesome-merge cypress/reports/*json > cypress/reports/finalreport.json",
+    "generate-reports": "merge cypress/reports/finalreport.json --reportDir ./ --inline",
+    "finaltest": "npm run testcases && npm run merge-reports && npm run generate-reports"
   },
   "author": "Rahul Arora",
   "license": "ISC",
@@ -19,6 +19,7 @@
     "cypress-xpath": "^1.6.0"
   },
   "dependencies": {
+    "cucumber": "^6.0.5",
     "cypress-downloadfile": "^1.2.0",
     "mochawesome": "^7.1.2",
     "mochawesome-merge": "^4.2.1",
