--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "devDependencies": {
     "@4tw/cypress-drag-drop": "^1.8.1",
-    "cypress": "^4.10.0",
+    "cypress": "^4.12.1",
+    "cypress-cucumber-preprocessor": "^4.3.1",
     "cypress-file-upload": "^4.1.1",
     "cypress-xpath": "^1.6.0"
   },
@@ -24,5 +25,8 @@
     "mochawesome": "^7.1.2",
     "mochawesome-merge": "^4.2.1",
     "mochawesome-report-generator": "^6.1.1"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true
   }
 }
